[package]
name = "my-telemetry-writer"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }
async-trait = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
